--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp sitemap.xml dist/sitemap.xml",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
